project(ch2)

add_executable(02_01_create_thread 01_create_thread.cc)

add_executable(02_02_join_and_detach 02_join_and_detach.cc)

add_executable(02_03_passing_arguments 03_passing_arguments.cc)

add_executable(02_04_transfer_ownership 04_transfer_ownership.cc)

add_executable(02_05_number_of_thread 05_number_of_thread.cc)

add_executable(02_06_thread_id 06_thread_id.cc)