project(ch2)

add_executable(create_thread 01_create_thread.cc)

add_executable(join_and_detach 02_join_and_detach.cc)

add_executable(passing_arguments 03_passing_arguments.cc)

add_executable(transfer_ownership 04_transfer_ownership.cc)

add_executable(number_of_thread 05_number_of_thread.cc)

add_executable(thread_id 06_thread_id.cc)